// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for branch 1`] = `
<tr>
  <td
    className="nowrap hide-overflow"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
        }
      }
      className="little-spacer-right"
    />
    <span
      title="branch-6.7"
    >
      branch-6.7
    </span>
    <span />
  </td>
  <td
    className="nowrap"
  >
    <withBranchStatus(BranchStatus)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
        }
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </td>
  <td
    className="nowrap"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="nowrap js-test-purge-toggle-container"
  >
    <BranchPurgeSetting
      branch={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "branch-6.7",
        }
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
      onUpdatePurgeSetting={[MockFunction]}
    />
  </td>
  <td
    className="nowrap"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[MockFunction]}
      >
        project_branch_pull_request.branch.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly for main branch 1`] = `
<tr>
  <td
    className="nowrap hide-overflow"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      className="little-spacer-right"
    />
    <span
      title="master"
    >
      master
    </span>
    <span>
      <div
        className="badge spacer-left"
      >
        branches.main_branch
      </div>
    </span>
  </td>
  <td
    className="nowrap"
  >
    <withBranchStatus(BranchStatus)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </td>
  <td
    className="nowrap"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="nowrap js-test-purge-toggle-container"
  >
    <BranchPurgeSetting
      branch={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
      onUpdatePurgeSetting={[MockFunction]}
    />
  </td>
  <td
    className="nowrap"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        className="js-rename"
        onClick={[MockFunction]}
      >
        project_branch_pull_request.branch.rename
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly for pull request 1`] = `
<tr>
  <td
    className="nowrap hide-overflow"
  >
    <BranchLikeIcon
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      className="little-spacer-right"
    />
    <span
      title="1001 – Foo Bar feature"
    >
      1001 – Foo Bar feature
    </span>
    <span />
  </td>
  <td
    className="nowrap"
  >
    <withBranchStatus(BranchStatus)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
        }
      }
      component={
        {
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
    />
  </td>
  <td
    className="nowrap"
  >
    <DateFromNow
      date="2018-01-01"
    />
  </td>
  <td
    className="nowrap"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        className="js-delete"
        destructive={true}
        onClick={[MockFunction]}
      >
        project_branch_pull_request.pull_request.delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;
